swc_infra/ingress-nginx/passbolt-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passbolt-ingress
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: nginx
  #nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "passbolt.softwarecom.ru"
    secretName: passbolt-infra-ingress
  rules:
  - host: "passbolt.softwarecom.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: passbolt-infra
            port:
              number: 80
